Changed buttons to divs. Styled new fonts, colors, spacing. Fixed sticky footer. Added a hero image and set max/min widths for main section.

--- a/style.css
+++ b/style.css
@@ -1,30 +1,52 @@
 @font-face{
-    font-family: Outage;
-    src: url(Outage_Personal_License/Outage.ttf)
+    font-family: Nickainley;
+    src: url(Nickainley-Normal.otf)
 }
 
 @font-face{
-    font-family: Twiggy;
-    src: url(Twiggy-Regular.otf)
+    font-family: Geomanist;
+    src: url(Geomanist-Regular&Italic/Webfont/Geomanist-Regular-Webfont/geomanist-regular-webfont.ttf)
 }
 
 body{
-    /* Display: flex;
-    flex-direction: column; */
+    font-family: Geomanist;
+    background-color: oldlace;
+    min-width: 800px;
+}
+
+.site {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.site-content {
+    flex: 1;
 }
 
 .headersection {
     text-align: center;
-    height: 130px;
+    height: 120px;
     width: 80%;
-    /* padding: 2% 2% 2% 2%; */
+    padding: 10px 10px 10px 10px;
     border: 4px solid #044e1a;
-    font-family: Outage;
+    font-family: Nickainley;
     color: #023802;
     margin-left: 10%;
     margin-right: 10%;
     background: palegreen;
-    
+}
+
+h1 {
+    font-size: 60px;
+    position: relative;
+    margin-top: -5px;
+}
+
+h2 {
+    position: relative;
+    margin:-25px;
+
 }
 
 .intro {
@@ -43,14 +65,21 @@ body{
 }
 
 .buttons {
-    /* font-family: Twiggy; */
+    font-family: Geomanist;
     flex: 1;
     margin: 5% 2% 2% 2%;
     text-align: center;
     font-size: 20pt;
-    background
-    padding: 3%;
+    padding: 1% 1% 1% 1%;
+    border: 2px solid green;
+    font-weight: bolder;
+    background: white;
 }
+
+.buttons:hover {
+        background-color: #044e1a;
+        color: white; 
+    }
 
 #buttonprod {
     background: darkgreen
@@ -64,14 +93,25 @@ body{
     background: lightblue
 }
 
+.heroimg {
+    display: block;
+    border:10px solid palegreen;
+    margin-top: 20px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+  
+}
+
 footer {
-    clear: both;
-    padding: 10px 0px 1px 0px; /*THIS CAN BE SMOOTHER*/
+    /* margin-top: 50px; */
+    padding: 5px 0px 1px 0px; /*THIS CAN BE SMOOTHER*/
     font-size: 9pt;
-    background-color: grey;
+    background-color: palegreen;
     text-align: center;
-    color: lightgray;
-    border-top: 10px solid hsl(145, 98%, 18%);
+    color: #044e1a;
+    border: 10px 1px 1px 1px solid hsl(145, 98%, 18%);
     margin: auto auto 0 auto;
-    width: 100%;
+    width: 80%;
 }
